# realtime-raytracer

./: .gitignore  BuildLinux.sh  BuildMacOS.sh  BuildWindows.bat  CMakeLists.txt  CleanBuildLinux.sh  CleanBuildMacOS.sh  CleanBuildWindows.bat  CompileShaders.py  InstallBrewDependencies.sh  InstallVcpkgDependencies.bat  README.md  default.json  ex1.cpp  ex1.json  ex2.cpp  ex2.json  ex3.cpp  ex4.cpp  ex4.json  ex5.cpp  ex5.json  ex6.cpp  ex6.json  main.cpp
ShaderCode/: Raytracer.comp.glsl  Shader_Frag.frag.glsl  Shader_Vert.vert.glsl
ShaderCode/include/: Brdf.glsl  Constants.glsl  KDTree.glsl  Primitives.glsl  Ray.glsl  Scene.glsl  Textures.glsl  UBO.glsl
ShaderCode/include/intersect/: Primitive.glsl  Sphere.glsl  Triangle.glsl
ShaderCode/include/light/: AmbientLight.glsl  Light.glsl  Light.h.glsl  PointLight.glsl  SpotLight.glsl
ShaderCode/include/primitive/: Box.glsl  InfinitePlane.glsl  Mesh.glsl  Primitive.glsl  Primitive.h.glsl  Sphere.glsl  Triangle.glsl
ShaderCode/include/shader/: BRDFShader.glsl  CookTorranceShader.glsl  EmissiveShader.glsl  FlatShader.glsl  LambertShader.glsl  MaterialShader.glsl  MirrorShader.glsl  PhongShader.glsl  RefractionShader.glsl  Shader.glsl  SimpleShadowShader.glsl  SimpleTextureShader.glsl
camera/: RT_Camera.cpp  RT_Camera.h  camera.h  perspectivecamera.cpp  perspectivecamera.h
common/: CImg.h  Input.cpp  Input.h  Log.h  VulkanAPI.cpp  VulkanAPI.h  Window.cpp  Window.h  brdfread.cpp  brdfread.h  color.cpp  color.h  common.h  ray.cpp  ray.h  texture.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h
data/: TPGE_1000M_C_PG21ALE_TB.ies
light/: ambientlight.cpp  ambientlight.h  pointlight.cpp  pointlight.h  spotlight.h
primitive/: box.h  infiniteplane.cpp  objmodel.cpp  sphere.h  triangle.cpp
renderer/: kdtreerenderer.h  renderer.h  simplerenderer.cpp  simplerenderer.h  superrenderer.cpp
scene/: scene.h  simplescene.cpp  simplescene.h
scenes/: caustic.json  caustic_mirror.json  ex3.json  ex6.json  glass_blur.json  glass_roughness.json  mirror_absorbing.json  mirror_blur.json  mirror_color.json  mirror_roughness.json  mosaik.json  ring.json
scripts/: BuildLinux.sh  BuildMacOS.sh  BuildWindows.bat  CleanBuildLinux.sh  CleanBuildMacOS.sh  CleanBuildWindows.bat  InstallBrewDependencies.sh  InstallVcpkgDependencies.bat
shader/: brdfshader.h  cooktorranceshader.cpp  cooktorranceshader.h  lambertshader.cpp  lambertshader.h  materialshader.cpp  materialshader.h  mirrorshader.cpp  mirrorshader.h  phongshader.cpp  phongshader.h  refractionshader.cpp  simpleshadowshader.h
src/: UserInterface.cpp  UserInterface.h  main.cpp
src/camera/: RT_Camera.cpp  RT_Camera.h
src/common/: ArgParse.cpp  ArgParse.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  Params.h  PlatformDetection.h  ProgressBar.cpp  ProgressBar.h  Resource.h  Subprocess.cpp  Subprocess.h  Types.h  VulkanAPI.cpp  VulkanAPI.h  Window.cpp  Window.h  texture.cpp  texture.h
src/light/: light.h  spotlight.cpp
src/lights/: AmbientLight.h  Light.h  PointLight.h  SpotLight.h
src/primitive/: box.cpp  infiniteplane.h  objmodel.h  primitive.h  sphere.cpp  triangle.h
src/primitives/: Box.h  InfinitePlane.h  Mesh.cpp  Mesh.h  Primitive.h  Sphere.cpp  Sphere.h  Triangle.h
src/renderer/: kdtreerenderer.cpp  superrenderer.h
src/scene/: Camera.cpp  Camera.h  InfinitePlane.cpp  KDTree.cpp  KDTree.h  Mesh.cpp  Mesh.h  ObjLoader.h  Primitive.h  RT_Camera.cpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Sphere.h  Triangle.cpp  Triangle.h  fastscene.cpp  fastscene.h  scene.cpp  scene.h
src/shader/: brdfshader.cpp  flatshader.cpp  flatshader.h  refractionshader.h  shader.h  simpleshadowshader.cpp
src/shaders/: BRDFShader.h  BrdfShader.h  CookTorranceShader.h  EmissiveShader.h  FlatShader.h  LambertShader.h  MaterialShader.h  MirrorShader.h  PhongShader.h  RefractionShader.h  Shader.h  SimpleShadowShader.h  SimpleTextureShader.h
src/vulkan/: Brdf.cpp  Brdf.h  Buffer.cpp  Buffer.h  ComputePipeline.cpp  ComputePipeline.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImGuiLayer.cpp  ImGuiLayer.h  OffscreenResources.cpp  OffscreenResources.h  Renderer.cpp  Renderer.h  SSBO.cpp  SSBO.h  ShaderCompiler.cpp  ShaderCompiler.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VulkanAPI.cpp  VulkanAPI.h  VulkanContext.cpp  VulkanContext.h
